--- a/data/import/local/full_EU.yml
+++ b/data/import/local/full_EU.yml
@@ -271,3 +271,5 @@ actions:
     source: data/import/common/AT/comment.csv
   - data_entity: mime-type
     source: data/import/common/common/mime_type.csv
+  - data_entity: antelope
+    source: data/import/local/common/antelope.csv
